Some bugs fixed

--- a/index.html
+++ b/index.html
@@ -1132,7 +1132,7 @@
         <section class="mapbox" data-mapbox>
           <figure>
             <iframe
-              src="https://www.google.com/maps/place/Gorakhpur,+Uttar+Pradesh/@26.7637151,83.4039116,12z/data=!3m1!4b1!4m6!3m5!1s0x3991446a0c332489:0x1ff3f97fdcc6bfa2!8m2!3d26.7605545!4d83.3731675!16zL20vMDRicXZ2?entry=ttu"
+              src="https://maps.app.goo.gl/gDutRsNKTATtNbGa6"
               width="400" height="300" loading="lazy"></iframe>
           </figure>
         </section>
