--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="https://www.instagram.com/youhaveme064/" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
@@ -456,7 +456,7 @@
           <ul class="clients-list has-scrollbar">
 
             <li class="clients-item">
-              <a href="#">
+              <a href="https://www.instagram.com/youhaveme064/">
                 <img src="./assets/images/logo-1-color.png" alt="client logo">
               </a>
             </li>
@@ -474,19 +474,19 @@
             </li>
 
             <li class="clients-item">
-              <a href="#">
+              <a href="https://bento.me/gaurav-kumar-yadav">
                 <img src="./assets/images/logo-4-color.png" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
-              <a href="#">
+              <a href="https://www.instagram.com/youhaveme064/">
                 <img src="./assets/images/logo-5-color.png" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
-              <a href="#">
+              <a href="https://www.instagram.com/youhaveme064/">
                 <img src="./assets/images/logo-6-color.png" alt="client logo">
               </a>
             </li>
