--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="https://www.instagram.com/youhaveme064/" class="social-link">
               <ion-icon name="logo-twitter"></ion-icon>
             </a>
           </li>
@@ -324,7 +324,7 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Gaurav kumar yadav was hired to create a corporate identity. We were very pleased with the work done. She has a
+                    Gaurav kumar yadav was hired to create a corporate identity. We were very pleased with the work done.He has a
                     lot of experience
                     and is very concerned about the needs of client. He make my website beautiful and intresting...
                   </p>
@@ -344,7 +344,7 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Gaurav kumar yadav was hired to create a corporate identity. We were very pleased with the work done. She has a
+                    Gaurav kumar yadav was hired to create a corporate identity. We were very pleased with the work done.He has a
                     lot of experience
                     and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
                     consectetur adipiscing
@@ -366,7 +366,7 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Gaurav kumar yadav was hired to create a professional app development. We were very pleased with the work done. She has a
+                    Gaurav kumar yadav was hired to create a professional app development. We were very pleased with the work done.He has a
                     lot of experience
                     and is very concerned about the needs of client.
                   </p>
@@ -430,7 +430,7 @@
 
               <div data-modal-text>
                 <p>
-                  Gaurav kumar yadav was hired to create a corporate identity. We were very pleased with the work done. She has a
+                  Gaurav kumar yadav was hired to create a corporate identity. We were very pleased with the work done.He has a
                   lot of experience
                   and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
                   consectetur adipiscing
